VM updates